<resources>
    <string name="app_name">MCO2-QuickFlip</string>
    <string name="create_accountsub">Create an Account to access our features</string>
    <string name="review_order">Review Order</string>
    <string name="save">Save</string>
    <string name="_20_cards">20 cards</string>
    <string name="daily_study_goal_cards">Daily Study Goal (cards)</string>
    <string name="daily_reminders">Daily Reminders</string>
    <string name="export1">Export</string>
    <string name="import1">Import</string>
    <string name="restore_from_backup">Restore from backup</string>
    <string name="check">Check</string>
    <string name="support_quickflip">Support QuickFlip</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="card_browser">Card Browser</string>
    <string name="decks">Decks</string>
    <string name="check_media">Check media</string>
    <string name="check_database">Check Database</string>
    <string name="quickflip_logo">QuickFlip Logo</string>
    <string name="drawer">Drawer</string>
    <string name="battery">Battery</string>
    <string name="store_item_icon">Store Item Icon</string>
    <string name="_200_points">200 points</string>
    <string name="continue2">CONTINUE</string>
    <string name="cancel2">CANCEL</string>
    <string name="date_store">Your data will be restored to a previous state. Any unsaved progress will be lost.</string>
    <string name="restore_backup">Restore backup?</string>
    <string name="submit">Submit</string>
    <string name="rate_quickflip">Rate Quickflip</string>
    <string name="quickflip_manual">QuickFlip Manual</string>
    <string name="confirm">CONFIRM</string>
    <string name="include_images">Include images</string>
    <string name="export_format">Export format:</string>
    <string name="sword">Sword</string>
    <string name="footer_background">Footer Background</string>
    <string name="store">Store</string>
    <string name="points_180">Points: 180</string>
    <string name="header_background">Header Background</string>
    <string name="daily">Daily</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="backup">Backup</string>
    <string name="tap_to_flip_swipe_to_rate">Tap to flip, swipe to rate</string>
    <string name="gestures">Gestures</string>
    <string name="controls">Controls</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="appearance">Appearance</string>
    <string name="study_reminders">Study Reminders</string>
    <string name="notifications">Notifications</string>
    <string name="every_6_hours">Every 6 hours</string>
    <string name="sync_frequency">Sync Frequency</string>
    <string name="sync">Sync</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="general">General</string>
    <string name="test">Test</string>
    <string name="browse">Browse</string>
    <string name="deck">Deck</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="time">Time</string>
    <string name="score">Score</string>
    <string name="you">You</string>
    <string name="history">History</string>
    <string name="my_score_850">My Score: 850</string>
    <string name="fastest_time_1_30">Fastest Time: 1:30</string>
    <string name="high_score_1000">High Score: 1000</string>
    <string name="deck_1_leaderboard">Deck 1 Leaderboard</string>
    <string name="welcome_to_quickflip">Welcome to QuickFlip</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="log_in">Log In</string>
    <string name="share_deck">Share Deck</string>
    <string name="import_deck">Import Deck</string>
    <string name="find_deck">Find Deck</string>
    <string name="add_deck">add deck</string>
    <string name="my_decks">My Decks</string>
    <string name="facebook_app_id">769787875301113</string>
    <string name="fb_login_protocol_scheme">fb769787875301113</string>
    <string name="facebook_client_token">ea454bb2e1b3a3f0a32d7c5a7953075c</string>
</resources>