<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvItemCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200_points"
        android:textColor="#FF0000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnItemIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerInside"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/quickflipcutedeck"
        android:contentDescription="@string/store_item_icon"
        app:layout_constraintTop_toTopOf="@id/tvItemCost"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:textColor="#053574"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnItemIcon"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
