<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/headerElement"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:src="@drawable/quickflipheaderwaveelement"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/header_background" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDeckLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deck_1_leaderboard"
            android:textColor="#053574"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardStats"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvDeckLeaderboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#EFF5F9"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivDeckProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/quickflipdeckicon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layoutScores"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@id/ivDeckProfile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_score_1000"
                        android:textSize="16sp"
                        android:textColor="#053574" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fastest_time_1_30"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:textColor="#053574" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_score_850"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:textColor="#053574" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="18sp"
                    android:textColor="#053574"
                    android:textStyle="bold"
                    android:layout_marginStart="115dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/ivDeckProfile"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#053574"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvHistory" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/separator">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/you"
                        android:textSize="16sp"
                        android:textColor="#053574"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/score"
                        android:textSize="16sp"
                        android:textColor="#053574"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time"
                        android:textSize="16sp"
                        android:textColor="#053574"
                        android:gravity="center" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/round_button"
            android:elevation="8dp"
            android:paddingEnd="2dp"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/quickflipplayicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/footerElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/quickflipfooterwaveelement"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/footer_background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>